# TR-IRLS

./: CMakeLists.txt  README.md
Apps/: bundle_large_common.h  bundle_large_robust.cpp
Apps/robust/: robust_lsq_schur_pcg_common.h  robust_lsq_schur_pcg_truncated_lsq.h
